# CoACD

./: CMakeLists.txt  README.md  configure-library-build.sh  main.cpp
public/: coacd.cpp  coacd.h
src/: bvh.cpp  clip.cpp  clip.h  clip_cap_triangulation.cpp  hausdorff.h  intersection.h  logger.h  mcts.cpp  mcts.h  model_obj.cpp  model_obj.h  process.cpp  process.h  progress.cpp  progress.h  sobol.cpp
src/btConvexHull/: btConvexHullComputer.cpp
tests/: clip_compare_runner.cpp  coacd_test.cpp  compare_clip_outputs.cmake
web/: CMakeLists.txt  README.md  binding.cc  bootstrap-linux.sh
web/demo/: index.html
web/js/: CoACDLoader.js
